--- a/user-core/pom.xml
+++ b/user-core/pom.xml
@@ -12,24 +12,59 @@
     <artifactId>user-core</artifactId>
 
     <dependencies>
-        <!-- 内部模块 -->
+        <!-- ******************************************* 内部模块 ***************************************** -->
         <dependency>
             <groupId>com.happycommunity.framework</groupId>
             <artifactId>framework-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.happycommunity.framework</groupId>
+            <artifactId>framework-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.happycommunity.user</groupId>
             <artifactId>user-interface</artifactId>
         </dependency>
 
+        <!-- ************************************* Spring Boot 基本依赖 ************************************ -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
+        <!-- ******************************************* 测试相关 ****************************************** -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Dubbo-->
         <dependency>
             <groupId>io.dubbo.springboot</groupId>
             <artifactId>spring-boot-starter-dubbo</artifactId>
         </dependency>
+
+        <!-- ****************************************** 数据库相关 *************************************** -->
+        <!-- Spring Boot Mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- MySQL 连接驱动依赖 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
