--- a/user-core/src/main/resources/application.yml
+++ b/user-core/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   dubbo:
     application:
       #注册在注册中心的名称，唯一标识，请勿重复
-      id: user-provider
-      name: user-provider
+      id: happycommunity-user
+      name: happycommunity-user
     #注册中心
     #zookeeper集群：zookeeper://127.0.0.1:2181?backup: 127.0.0.1:2180,127.0.0.1:2182
     #单zookeeper服务：zookeeper://127.0.0.1:2181
@@ -13,7 +13,7 @@ spring:
       address: zookeeper://39.106.124.34:2181
     #暴露服务方式
     protocol:
-      id: userProtocol
+      id: happycommunity-user-protocol
       #暴露服务协议名称
       name: dubbo
       #暴露服务端口
@@ -22,7 +22,7 @@ spring:
     scan: com.happycommunity.user.service
 
   datasource:
-    url: jdbc:mysql://39.106.124.34:3306/happycommunity?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://39.106.124.34:3306/happycommunity_user?useUnicode=true&characterEncoding=utf-8
     username: root
     password: danny6688
     driver-class-name: com.mysql.jdbc.Driver
@@ -51,3 +51,6 @@ spring:
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
     
 
+logging:
+  level:
+    com.happycommunity.user.dao: debug
