--- a/user-core/pom.xml
+++ b/user-core/pom.xml
@@ -20,6 +20,12 @@
         <dependency>
             <groupId>com.happycommunity.framework</groupId>
             <artifactId>framework-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.happycommunity.user</groupId>
