--- a/user-interface/pom.xml
+++ b/user-interface/pom.xml
@@ -18,6 +18,16 @@
             <groupId>com.happycommunity.framework</groupId>
             <artifactId>framework-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.happycommunity.framework</groupId>
+            <artifactId>framework-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
     </dependencies>
 
